Style the website close #2

--- a/index.html
+++ b/index.html
@@ -15,20 +15,25 @@
   <main>
     <section class="content fltl">
       <section>
-        <p>Get insights that help your business grow.</p>
+        <h1>Get <span>insights</span> that help your business grow.</h1>
       </section>
 
-      <section>
+      <section class="mp">
         <p>Discover the benefits of data analytics and make better decisions regarding revenue, customer 
         experience, and overall efficiency.</p>
       </section>
 
 
       <section>
-        <ul>
-          <li>10k+ companies</li>
-          <li>314 templates</li>
-          <li>12m+ queries</li>
+        <ul class="numbers">
+          <li>10k+</li>
+          <li>314</li>
+          <li>12M+</li>
+        </ul>
+        <ul class="text">
+          <li>COMPANIES</li>
+          <li>TEMPLATES</li>
+          <li>QUERIES</li>
         </ul>
       </section>
   </section>
@@ -36,6 +41,8 @@
   <section class="image fltr">
     <img src="images/image-header-desktop.jpg" alt="Family" />
   </section>
+
+  
 
   </main>
 </body>
