add overlay & fix footer (section 3)
close #3

--- a/index.html
+++ b/index.html
@@ -41,7 +41,10 @@
   <section class="image fltr">
     <img src="images/image-header-desktop.jpg" alt="Family" />
   </section>
-
+  
+  <div class="overlay fltr">
+    <div></div>
+  </div>
   
 
   </main>
